# numpy-determinant

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: validate.yml
numpy_determinant/: __init__.py  determinant.py
src/: __init__.py  combinatorics.py  determinant.py  experiment.py
test/: test_01_basic.py  test_02_advanced.py  test_02_perm_parity.py  test_03_advanced.py  test_03_combinatorics.py  test_03_numwall.py  test_04_numwall.py
