[metadata]
name = numpy-determinant
version = 0.0.1
url = https://github.com/trundev/numpy-determinant
author = Todor Trundev
author_email = trundev@gmail.com
classifiers =
    Environment :: Console
    Topic :: Scientific/Engineering :: Mathematics
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = MIT License
description = Generic NumPy determinant calculator
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
packages = numpy_determinant
package_dir =
    numpy_determinant=src
python_requires = >=3.9
install_requires =
    numpy

[tool:pytest]
pythonpath=src
